@@ -1,5 +1,6 @@
 package com.apiusers.service;
 
+import com.apiusers.entity.PhoneCodeEntity;
 import com.apiusers.entity.RoleEntity;
 import com.apiusers.entity.UserEntity;
 import com.apiusers.exception.ErrorDuplicateKey;
@@ -8,6 +9,7 @@ import com.apiusers.mapper.IUserMapper;
 import com.apiusers.record.request.UserRequestRecord;
 import com.apiusers.record.response.ResponseMessageRecord;
 import com.apiusers.record.response.UserResponseRecord;
+import com.apiusers.repository.PhoneCodeRepository;
 import com.apiusers.repository.RoleRepository;
 import com.apiusers.repository.UserRepository;
 import jakarta.transaction.Transactional;
@@ -19,11 +21,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Log4j2
 @AllArgsConstructor
@@ -33,20 +31,26 @@ public class UserServiceImpl  implements IUserService{
     private final IUserMapper mapper;
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
+    private final PhoneCodeRepository phoneCodeRepository;
 
     @Override
     public Page<UserResponseRecord> findAllWithPagination(int page, int size, String orderBy, String order) {
         log.info("UserServiceImpl call method findAllWithPagination()");
         Sort.Direction direction = order.equals("desc") ? Sort.Direction.DESC : Sort.Direction.ASC;
         Page<UserEntity> users = this.userRepository.findAll(PageRequest.of(page, size, Sort.by(direction, orderBy)));
-        return users.map( u -> this.mapper.userEntityToUserResponseRecord(u));
+        return users.map(this.mapper::userEntityToUserResponseRecord);
     }
 
     @Override
-    public List<UserResponseRecord> findAll() {
+    public List<UserResponseRecord> findAll(Long roleId) {
         log.info("UserServiceImpl call method findAll()");
-        List<UserEntity> users = this.userRepository.findAll();
-        return users.stream().map( u -> this.mapper.userEntityToUserResponseRecord(u)).collect(Collectors.toList());
+        List<UserEntity> users = null;
+        if (roleId > 0) {
+            users = this.userRepository.findAllUsersByRoleId(roleId);
+        }else {
+            users = this.userRepository.findAll();
+        }
+        return users.stream().map(this.mapper::userEntityToUserResponseRecord).toList();
     }
 
     @Override
@@ -74,16 +78,20 @@ public class UserServiceImpl  implements IUserService{
     public ResponseMessageRecord update(Long id, UserRequestRecord data) {
         log.info("UserServiceImpl call method update()");
         UserEntity user =  this.userRepository.findById(id).orElseThrow(() -> new ErrorNotFound("User not found try again"));
+        PhoneCodeEntity phoneCodeEntity = this.phoneCodeRepository.findById(data.phoneCodeId()).orElseThrow(() -> new ErrorNotFound("Phonecode not found try again"));
+
         user.setName(data.name());
         user.setLastname(data.lastname());
         user.setEmail(data.email());
         user.setTelephone(data.telephone());
+        user.setPhoneCodeEntity(phoneCodeEntity);
 
         Set<RoleEntity> roles = new HashSet<>();
         data.roles().forEach( r -> {
             RoleEntity role = this.roleRepository.findById(Long.valueOf(r)).orElseThrow(() -> new ErrorNotFound("Role not found try again"));
             roles.add(role);
         });
+
         user.setRoles(roles);
         this.userRepository.save(user);
         return new ResponseMessageRecord(HttpStatus.OK.value(), "User updated successfully");
